# reactor-enterprise-integration-agents

./: .dockerignore  .env.example  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.base  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
agents/: __init__.py  base_agent.py
docs/pt-br/: agent-architecture.md  best-practices.md  integration-patterns.md  troubleshooting.md
examples/: command_messages_example.py  complete_example.py  message_queue_example.py  pipes_and_filters_example.py  pubsub_example.py
pattern-1-message-queue/: Dockerfile  main.py
pattern-2-pipes-filters/: api.py
pattern-3-pubsub/: Dockerfile  README.md  api.py  main.py
pattern-4-command-messages/: Dockerfile  main.py
patterns/: __init__.py
patterns/command_messages/: __init__.py
patterns/message_queue/: __init__.py
patterns/pipes_and_filters/: __init__.py
shared/: __init__.py  models.py
shared/mcp/: __init__.py  fastapi_mcp.py
shared/utils/: eventhub_utils.py
src/: __init__.py
src/agents/: base_agent.py
src/patterns/pubsub/: __init__.py
src/services/: __init__.py
src/services/command_messages/: Dockerfile  README.md  api.py  main.py
src/services/message_queue/: Dockerfile  README.md  api.py  main.py
src/services/pipes_filters/: Dockerfile  README.md  api.py  main.py
src/services/pubsub/: Dockerfile  README.md  api.py  main.py
src/shared/: azure_clients.py
src/shared/utils/: __init__.py  agent_utils.py  eventhub_utils.py
tests/: test_command_messages.py  test_pipes_and_filters.py
